test: 예외처리 테스트 로직 추가